K8S installation chapter (#243)
* fix png error, add deploy in minikube chapter

* minor fix